# agno-data-governance-agent

./: .env.example  .gitignore  0.llm_call.py  README.md  config.py  main.py  pyproject.toml  requirements.txt  test_compliance_reporter.py  test_data_classifier.py  test_lineage_agent.py  test_pii_detector.py  test_policy_agent.py
.github/workflows/: ci.yml
agents/: __init__.py  compliance_reporter.py  data_classifier.py  lineage_agent.py  pii_detector.py  policy_agent.py
data/: sample_credit_portfolio.csv
docs/: architecture.md
pipelines/: credit_governance_pipeline.py
tests/: conftest.py  test_compliance_reporter.py  test_data_classifier.py  test_json_parser.py  test_lineage_agent.py  test_pii_detector.py  test_policy_agent.py
utils/: __init__.py  json_parser.py
