[project]
name = "agno-data-governance-agent"
version = "0.1.0"
description = "Sistema multiagente de IA para governança de dados sensíveis com foco em LGPD e crédito"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.4.6",
    "groq>=1.0.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: testes que chamam a API do LLM (requerem GROQ_API_KEY)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
